--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -324,7 +324,7 @@ section {
     font-size: 14px;
     font-weight: bolder;
     color: #fff;
-    background: var(--color-primary-red);
+    background: var(--color-primary);
     padding: 8px 20px;
     margin-left: 30px;
     border-radius: 30px;
