--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -707,12 +707,14 @@ section {
 }
 
 /*.Register-customer-new .register-form-bg {*/
-/*    background: #dcdde1; !* fallback for old browsers *!*/
-/*    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #dcdde1); !* Chrome 10-25, Safari 5.1-6 *!*/
-/*    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #dcdde1); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
+/*    background: #dcdde1;*/
+/*    !* fallback for old browsers *!*/
+/*    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #dcdde1);*/
+/*    !* Chrome 10-25, Safari 5.1-6 *!*/
+/*    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #dcdde1);*/
+/*    !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
 /*    border-bottom-right-radius: 20px;*/
 /*    border-top-right-radius: 20px;*/
-
 /*}*/
 
 .Register-customer-new .reg-customer-form {
@@ -802,11 +804,23 @@ section {
 }
 
 .Register-customer-new .width {
-    width: 78%;
+    width: 25.2em;
+}
+
+@media (max-width: 425px) {
+    .Register-customer-new .width {
+        width: 100%;
+    }
+}
+
+@media (max-width: 316px) {
+    .cars {
+        display: none;
+    }
 }
 
 .Register-customer-new .reg-customer-form button[type=button] {
-    background: #21618c;
+    background: #216a8c;
     border: 0;
     padding: 14px 60px;
     color: #fff;
@@ -815,14 +829,13 @@ section {
 }
 
 .Register-customer-new .reg-customer-form button[type=button]:hover {
-    background: #207fbf;
+    background: #2068bf;
 }
 
 @-webkit-keyframes animate-loading {
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
@@ -832,12 +845,10 @@ section {
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
 }
-
 
 
 
