--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -740,6 +740,29 @@ section {
     color: var(--color-primary);
 }
 
+.about .content ul {
+    list-style: none;
+    padding: 0;
+}
+
+.about .content ul li {
+    padding: 0 0 8px 26px;
+    position: relative;
+}
+
+.about .content ul i {
+    position: absolute;
+    font-size: 20px;
+    left: 0;
+    top: -3px;
+    color: var(--color-primary);
+}
+
+.about .content p:last-child {
+    margin-bottom: 0;
+}
+
+
 /* # =========== Register New Customer Section ==================*/
 .Register-customer-new .register-img {
     min-height: 500px;
