contac form error msg style added

--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -1049,6 +1049,35 @@ section {
     transition: 0.3s;
 }
 
+.contact .info-item .social-links a:hover {
+    color: var(--color-primary);
+}
+
+.contact .email-form {
+    width: 100%;
+    margin-top: 40px;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: rgb(0 0 0 / 30%) 0 19px 38px, rgb(0 0 0 / 22%) 0 15px 12px;
+}
+
+.contact .email-form .form-group {
+    padding-bottom: 20px;
+}
+
+.contact .email-form .error-message {
+    display: none;
+    color: #fff;
+    background: #df1529;
+    text-align: left;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.contact .email-form .error-message br + br {
+    margin-top: 25px;
+}
+
 
 
 /* ======================= # Footer ======================*/
