contac form send msg style added

--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -1077,6 +1077,21 @@ section {
 .contact .email-form .error-message br + br {
     margin-top: 25px;
 }
+.contact .email-form .sent-message {
+    display: none;
+    color: #fff;
+    background: #059652;
+    text-align: center;
+    padding: 15px;
+    font-weight: 600;
+}
+
+.contact .email-form .loading {
+    display: none;
+    background: #fff;
+    text-align: center;
+    padding: 15px;
+}
 
 
 
