contac form email style added

--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -1093,6 +1093,29 @@ section {
     padding: 15px;
 }
 
+.contact .email-form .loading:before {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px -6px 0;
+    border: 3px solid #059652;
+    border-top-color: #fff;
+    -webkit-animation: animate-loading 1s linear infinite;
+    animation: animate-loading 1s linear infinite;
+}
+
+.contact .email-form textarea {
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+}
+
+.contact .email-form textarea:focus {
+    border-color: var(--color-primary);
+}
+
 
 
 /* ======================= # Footer ======================*/
