--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -858,6 +858,32 @@ section {
     box-shadow: 0 8px 28px rgba(18, 87, 206, 0.45);
 }
 
+.cars .nav-tabs {
+    border: 0;
+}
+
+.cars .contentDiv {
+    display: inline-flex;
+}
+
+.cars .nav-link {
+    margin: 0 10px;
+    padding: 10px 5px;
+    transition: 0.3s;
+    color: var(--color-secondary);
+    border-radius: 0;
+    cursor: pointer;
+    height: 100%;
+    border: 0;
+    border-bottom: 2px solid #b6b6bf;
+}
+
+@media (max-width: 575px) {
+    .cars .nav-link {
+        margin: 0 10px;
+        padding: 10px 0;
+    }
+}
 
 /* # =========== Register New Customer Section ==================*/
 .Register-customer-new .register-img {
