--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -885,6 +885,33 @@ section {
     }
 }
 
+.cars .nav-link i {
+    padding-right: 15px;
+    font-size: 48px;
+}
+
+.cars .nav-link h4 {
+    font-size: 18px;
+    font-weight: 400;
+    margin: 0;
+    font-family: var(--font-secondary);
+}
+
+@media (max-width: 575px) {
+    .cars .nav-link h4 {
+        font-size: 16px;
+    }
+}
+
+.cars .nav-link:hover {
+    color: var(--color-primary);
+}
+
+.cars .nav-link.active {
+    color: var(--color-primary);
+    border-color: var(--color-primary);
+}
+
 /* # =========== Register New Customer Section ==================*/
 .Register-customer-new .register-img {
     min-height: 500px;
