--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -982,6 +982,71 @@ section {
     border-radius: 15px;
 }
 
+.list-group-item {
+    background: #eee; /* fallback for old browsers */
+    /*background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF); !* Chrome 10-25, Safari 5.1-6 *!*/
+    /*background: linear-gradient(to right, #E2E2E2, #C9D6FF); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
+    padding: 6px;
+    margin-bottom: -1px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 20px;
+}
+
+@media (max-device-width: 990px) {
+    .list-group-item {
+        font-size: 16px;
+    }
+}
+
+@media (max-device-width: 762px) {
+    .list-group-item {
+        font-size: 0.8rem;
+    }
+
+    .stats-counter .stats-item span {
+        font-size: 2rem;
+    }
+}
+
+.list-group-item:first-child {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.list-group-item:last-child {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.fontSize {
+    font-size: 1.1em;
+    font-weight: bolder;
+    color: var(--color-secondary);
+    opacity: 0.8;
+}
+
+@media (max-device-width: 320px) {
+    .list-group-item {
+        font-size: 0.7rem;
+    }
+
+    .fontSize {
+        font-size: 1em;
+    }
+
+    .span {
+        font-size: 1em;
+    }
+}
+
+.span {
+    color: #3c89e7;
+    font-size: 1.1em;
+    font-weight: bolder;
+    opacity: 0.8;
+}
+
 /* # =========== Register New Customer Section ==================*/
 .Register-customer-new .register-img {
     min-height: 500px;
