--- a/Front_End/assets/css/main.css
+++ b/Front_End/assets/css/main.css
@@ -983,9 +983,7 @@ section {
 }
 
 .list-group-item {
-    background: #eee; /* fallback for old browsers */
-    /*background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF); !* Chrome 10-25, Safari 5.1-6 *!*/
-    /*background: linear-gradient(to right, #E2E2E2, #C9D6FF); !* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *!*/
+    background: #eee;
     padding: 6px;
     margin-bottom: -1px;
     border-radius: 15px;
