page title style added

--- a/Front_End/assets/css/dashboardStyle.css
+++ b/Front_End/assets/css/dashboardStyle.css
@@ -45,3 +45,15 @@ h6 {
         padding: 20px;
     }
 }
+
+/* =============== # Page Title ===================== */
+.pageTitle {
+    margin-bottom: 10px;
+}
+
+.pageTitle h1 {
+    font-size: 24px;
+    margin-bottom: 0;
+    font-weight: 600;
+    color: #012970;
+}
