--- a/Front_End/assets/css/dashboardStyle.css
+++ b/Front_End/assets/css/dashboardStyle.css
@@ -57,3 +57,34 @@ h6 {
     font-weight: 600;
     color: #012970;
 }
+
+/* =============== # Back to top button ================= */
+.back-to-top {
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    right: 15px;
+    bottom: 15px;
+    z-index: 99999;
+    background: #1276ce;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    transition: all 0.4s;
+}
+
+.back-to-top i {
+    font-size: 24px;
+    color: #fff;
+    line-height: 0;
+}
+
+.back-to-top:hover {
+    background: #5ca4fc;
+    color: #fff;
+}
+
+.back-to-top.active {
+    visibility: visible;
+    opacity: 1;
+}
