--- a/Front_End/assets/css/dashboardStyle.css
+++ b/Front_End/assets/css/dashboardStyle.css
@@ -1,4 +1,5 @@
 /* ============= # General ================= */
+
 :root {
     scroll-behavior: smooth;
 }
@@ -34,6 +35,7 @@ h6 {
 }
 
 /* ============== # Main ========================= */
+
 #main {
     margin-top: 60px;
     padding: 20px 30px;
@@ -47,6 +49,7 @@ h6 {
 }
 
 /* =============== # Page Title ===================== */
+
 .pageTitle {
     margin-bottom: 10px;
 }
@@ -59,6 +62,7 @@ h6 {
 }
 
 /* =============== # Back to top button ================= */
+
 .back-to-top {
     position: fixed;
     visibility: hidden;
@@ -92,6 +96,7 @@ h6 {
 /* # ====== Override some default Bootstrap styling ========= */
 
 /* === Dropdown menus === */
+
 .dropdown-menu {
     border-radius: 4px;
     padding: 10px 0;
@@ -186,6 +191,7 @@ h6 {
 }
 
 /* === Light Backgrounds === */
+
 .bg-primary-light {
     background-color: #cfe2ff;
     border-color: #cfe2ff;
@@ -222,6 +228,7 @@ h6 {
 }
 
 /* === Card === */
+
 .card {
     margin-bottom: 30px;
     border: none;
@@ -260,6 +267,7 @@ h6 {
 }
 
 /* === Alerts === */
+
 .alert-heading {
     font-weight: 500;
     font-family: "Poppins", sans-serif;
@@ -267,6 +275,7 @@ h6 {
 }
 
 /* === Close Button === */
+
 .btn-close {
     background-size: 25%;
 }
@@ -277,6 +286,7 @@ h6 {
 }
 
 /* === Accordion === */
+
 .accordion-item {
     border: 1px solid #ebeef4;
 }
@@ -309,6 +319,7 @@ h6 {
 }
 
 /* === Breadcrumbs === */
+
 .breadcrumb {
     font-size: 14px;
     font-family: "Nunito", sans-serif;
@@ -335,6 +346,7 @@ h6 {
 }
 
 /* === Bordered Tabs === */
+
 .nav-tabs-bordered {
     border-bottom: 2px solid #ebeef4;
 }
@@ -357,6 +369,7 @@ h6 {
 }
 
 /* ================== # Header =============== */
+
 .logo {
     line-height: 1;
 }
@@ -453,4 +466,30 @@ h6 {
 
 .search-form button i {
     color: #012970;
+}
+
+/* ============== # Form ============== */
+
+form .form-label, .input-group-text {
+    font-size: 1em;
+    margin-bottom: 2px;
+    font-weight: bolder;
+    color: #012970;
+}
+
+form .form-control {
+    font-size: 1em;
+    margin-bottom: 2px;
+    font-weight: 600;
+    color: #2f3640;
+    border-radius: 10px;
+}
+
+form .btn {
+    font-size: 1em;
+    padding: 10px 25px;
+    border: none;
+    font-weight: 600;
+    color: #2f3640;
+    border-radius: 10px;
 }
