--- a/Front_End/assets/css/dashboardStyle.css
+++ b/Front_End/assets/css/dashboardStyle.css
@@ -833,3 +833,51 @@ form .btn {
 .dashboard .filter .dropdown-item {
     padding: 8px 15px;
 }
+
+/* === Info Cards === */
+
+.dashboard .info-card {
+    padding-bottom: 10px;
+}
+
+.dashboard .info-card h6 {
+    font-size: 28px;
+    color: #012970;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+}
+
+.dashboard .card-icon {
+    font-size: 32px;
+    line-height: 0;
+    width: 64px;
+    height: 64px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.dashboard .car-card .card-icon {
+    color: #4154f1;
+    background: #D2DEF3;
+}
+
+.dashboard .driver-card .card-icon {
+    color: #2eca6a;
+    background: #e0f8e9;
+}
+
+.dashboard .customers-card .card-icon {
+    color: #ff771d;
+    background: #ffecdf;
+}
+
+.dashboard .maintain-card .card-icon {
+    color: #ff4757;
+    background:#FCCFD5;
+}
+
+.dashboard .booking-card .card-icon {
+    color: #2f3542;
+    background: #dfe4ea;
+}
