--- a/Front_End/assets/css/dashboardStyle.css
+++ b/Front_End/assets/css/dashboardStyle.css
@@ -11,12 +11,12 @@ body {
 }
 
 a {
-    color: #4154f1;
+    color: #282828;
     text-decoration: none;
 }
 
 a:hover {
-    color: #717ff5;
+    color: #717171;
     text-decoration: none;
 }
 
@@ -58,7 +58,7 @@ h6 {
     font-size: 24px;
     margin-bottom: 0;
     font-weight: 600;
-    color: #012970;
+    color: #000000;
 }
 
 /* =============== # Back to top button ================= */
@@ -70,7 +70,7 @@ h6 {
     right: 15px;
     bottom: 15px;
     z-index: 99999;
-    background: #1276ce;
+    background: #868686;
     width: 40px;
     height: 40px;
     border-radius: 20px;
@@ -84,7 +84,7 @@ h6 {
 }
 
 .back-to-top:hover {
-    background: #5ca4fc;
+    background: #9e9e9e;
     color: #fff;
 }
 
@@ -127,7 +127,7 @@ h6 {
 }
 
 .dropdown-menu .dropdown-divider {
-    color: #5cbcfc;
+    color: #2d2d2d;
     margin: 0;
 }
 
@@ -144,7 +144,7 @@ h6 {
 }
 
 .dropdown-menu .dropdown-item:hover {
-    background-color: #f6f9ff;
+    background-color: #cbcbcb;
 }
 
 @media (min-width: 768px) {
@@ -157,8 +157,8 @@ h6 {
         top: -7px;
         right: 20px;
         transform: rotate(45deg);
-        border-top: 1px solid #eaedf1;
-        border-left: 1px solid #eaedf1;
+        border-top: 1px solid #e7e7e7;
+        border-left: 1px solid #cbcbcb;
     }
 }
 
@@ -193,38 +193,38 @@ h6 {
 /* === Light Backgrounds === */
 
 .bg-primary-light {
-    background-color: #cfe2ff;
-    border-color: #cfe2ff;
+    background-color: #cdcdcd;
+    border-color: #000000;
 }
 
 .bg-secondary-light {
-    background-color: #e2e3e5;
-    border-color: #e2e3e5;
+    background-color: #bdbdbd;
+    border-color: #000000;
 }
 
 .bg-success-light {
-    background-color: #d1e7dd;
-    border-color: #d1e7dd;
+    background-color: #b1b1b1;
+    border-color: #000000;
 }
 
 .bg-danger-light {
-    background-color: #f8d7da;
-    border-color: #f8d7da;
+    background-color: #959595;
+    border-color: #000000;
 }
 
 .bg-warning-light {
-    background-color: #fff3cd;
-    border-color: #fff3cd;
+    background-color: #686868;
+    border-color: #000000;
 }
 
 .bg-info-light {
-    background-color: #cff4fc;
-    border-color: #cff4fc;
+    background-color: #5c5c5c;
+    border-color: #000000;
 }
 
 .bg-dark-light {
-    background-color: #d3d3d4;
-    border-color: #d3d3d4;
+    background-color: #3e3e3e;
+    border-color: #000000;
 }
 
 /* === Card === */
@@ -238,9 +238,9 @@ h6 {
 
 .card-header,
 .card-footer {
-    border-color: #ebeef4;
+    border-color: #e5e5e5;
     background-color: #fff;
-    color: #5cc4fc;
+    color: #8b8b8b;
     padding: 15px;
 }
 
@@ -248,12 +248,12 @@ h6 {
     padding: 20px 0 15px 0;
     font-size: 18px;
     font-weight: 500;
-    color: #012970;
+    color: #3e3e3e;
     font-family: "Poppins", sans-serif;
 }
 
 .card-title span {
-    color: #899bbd;
+    color: #afafaf;
     font-size: 14px;
     font-weight: 400;
 }
@@ -288,7 +288,7 @@ h6 {
 /* === Accordion === */
 
 .accordion-item {
-    border: 1px solid #ebeef4;
+    border: 1px solid #e7e7e7;
 }
 
 .accordion-button:focus {
@@ -297,8 +297,8 @@ h6 {
 }
 
 .accordion-button:not(.collapsed) {
-    color: #1283ce;
-    background-color: #f6f9ff;
+    color: #494949;
+    background-color: #e5e5e5;
 }
 
 .accordion-flush .accordion-button {
@@ -309,12 +309,12 @@ h6 {
 
 .accordion-flush .accordion-button:not(.collapsed) {
     box-shadow: none;
-    color: #1276ce;
+    color: #b1b1b1;
 }
 
 .accordion-flush .accordion-body {
     padding: 0 0 15px 0;
-    color: #3e4f6f;
+    color: #525252;
     font-size: 15px;
 }
 
@@ -323,25 +323,25 @@ h6 {
 .breadcrumb {
     font-size: 14px;
     font-family: "Nunito", sans-serif;
-    color: #899bbd;
+    color: #bfbfbf;
     font-weight: 600;
 }
 
 .breadcrumb a {
-    color: #899bbd;
+    color: #bfbfbf;
     transition: 0.3s;
 }
 
 .breadcrumb a:hover {
-    color: #51678f;
+    color: #8d8d8d;
 }
 
 .breadcrumb .breadcrumb-item::before {
-    color: #899bbd;
+    color: #bababa;
 }
 
 .breadcrumb .active {
-    color: #51678f;
+    color: #868686;
     font-weight: 600;
 }
 
@@ -359,13 +359,13 @@ h6 {
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-    color: #1292ce;
+    color: #b6b6b6;
 }
 
 .nav-tabs-bordered .nav-link.active {
     background-color: #fff;
-    color: #1276ce;
-    border-bottom: 2px solid #1257ce;
+    color: #4c4c4c;
+    border-bottom: 2px solid #c2c2c2;
 }
 
 /* ================== # Header =============== */
@@ -389,7 +389,7 @@ h6 {
 }
 
 .logo span span {
-    color: #126dce;
+    color: #7f7f7f;
 }
 
 .header {
@@ -405,7 +405,7 @@ h6 {
     font-size: 32px;
     padding-left: 10px;
     cursor: pointer;
-    color: #012970;
+    color: #686868;
 }
 
 .search-bar {
@@ -441,7 +441,7 @@ h6 {
 
 .search-form input {
     font-size: 1em;
-    color: #012970;
+    color: #525252;
     border: 1px solid rgba(1, 41, 112, 0.2);
     padding: 7px 38px 7px 8px;
     border-radius: 10px;
@@ -453,8 +453,8 @@ h6 {
 .search-form input:focus,
 .search-form input:hover {
     outline: none;
-    box-shadow: 0 0 10px 0 rgba(1, 41, 112, 0.15);
-    border: 1px solid rgba(1, 41, 112, 0.3);
+    box-shadow: 0 0 10px 0 rgba(76, 76, 76, 0.15);
+    border: 1px solid rgba(45, 45, 45, 0.3);
 }
 
 .search-form button {
@@ -465,7 +465,7 @@ h6 {
 }
 
 .search-form button i {
-    color: #012970;
+    color: #616161;
 }
 
 /* ============== # Form ============== */
@@ -474,14 +474,14 @@ form .form-label, .input-group-text {
     font-size: 1em;
     margin-bottom: 2px;
     font-weight: bolder;
-    color: #012970;
+    color: #404040;
 }
 
 form .form-control {
     font-size: 1em;
     margin-bottom: 2px;
     font-weight: 600;
-    color: #2f3640;
+    color: #474747;
     border-radius: 10px;
 }
 
@@ -508,13 +508,13 @@ form .btn {
 
 .header-nav .nav-icon {
     font-size: 22px;
-    color: #012970;
+    color: #444444;
     margin-right: 25px;
     position: relative;
 }
 
 .header-nav .nav-profile {
-    color: #012970;
+    color: #4b4b4b;
 }
 
 .header-nav .nav-profile img {
@@ -646,7 +646,7 @@ form .btn {
     padding: 20px;
     overflow-y: auto;
     scrollbar-width: thin;
-    scrollbar-color: #aab7cf transparent;
+    scrollbar-color: #c6c6c6 transparent;
     box-shadow: 0 0 20px rgba(1, 41, 112, 0.1);
     background-color: #fff;
 }
@@ -664,7 +664,7 @@ form .btn {
 }
 
 .sidebar::-webkit-scrollbar-thumb {
-    background-color: #aab7cf;
+    background-color: #acacac;
 }
 
 @media (min-width: 1200px) {
@@ -712,7 +712,7 @@ form .btn {
 .sidebar-nav .nav-heading {
     font-size: 11px;
     text-transform: uppercase;
-    color: #899bbd;
+    color: #b8b8b8;
     font-weight: 600;
     margin: 10px 0 5px 15px;
 }
@@ -722,7 +722,7 @@ form .btn {
     align-items: center;
     font-size: 15px;
     font-weight: 600;
-    color: #4154f1;
+    color: #575757;
     transition: 0.3s;
     background: #f6f9ff;
     padding: 10px 15px;
@@ -732,25 +732,25 @@ form .btn {
 .sidebar-nav .nav-link i {
     font-size: 16px;
     margin-right: 10px;
-    color: #4154f1;
+    color: #4e4e4e;
 }
 
 .sidebar-nav .nav-link.collapsed {
-    color: #012970;
+    color: #2f2f2f;
     background: #fff;
 }
 
 .sidebar-nav .nav-link.collapsed i {
-    color: #899bbd;
+    color: #acacac;
 }
 
 .sidebar-nav .nav-link:hover {
-    color: #4154f1;
+    color: #5f5f5f;
     background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-    color: #4154f1;
+    color: #6d6d6d;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -773,7 +773,7 @@ form .btn {
     align-items: center;
     font-size: 14px;
     font-weight: 600;
-    color: #012970;
+    color: #000000;
     transition: 0.3s;
     padding: 10px 0 10px 40px;
 }
@@ -787,11 +787,11 @@ form .btn {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-    color: #4154f1;
+    color: #4e4e4e;
 }
 
 .sidebar-nav .nav-content a.active i {
-    background-color: #4154f1;
+    background-color: #666666;
 }
 /* ============== # Dashboard ============== */
 
@@ -804,7 +804,7 @@ form .btn {
 }
 
 .dashboard .filter .icon {
-    color: #aab7cf;
+    color: #a7a7a7;
     padding-right: 20px;
     padding-bottom: 5px;
     transition: 0.3s;
@@ -813,7 +813,7 @@ form .btn {
 
 .dashboard .filter .icon:hover,
 .dashboard .filter .icon:focus {
-    color: #4154f1;
+    color: #4c4c4c;
 }
 
 .dashboard .filter .dropdown-header {
@@ -825,7 +825,7 @@ form .btn {
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #aab7cf;
+    color: #dcdcdc;
     margin-bottom: 0;
     padding: 0;
 }
@@ -842,7 +842,7 @@ form .btn {
 
 .dashboard .info-card h6 {
     font-size: 28px;
-    color: #012970;
+    color: #3d3d3d;
     font-weight: 700;
     margin: 0;
     padding: 0;
@@ -858,28 +858,28 @@ form .btn {
 }
 
 .dashboard .car-card .card-icon {
-    color: #4154f1;
-    background: #D2DEF3;
+    color: #ffffff;
+    background: #282828;
 }
 
 .dashboard .driver-card .card-icon {
-    color: #2eca6a;
-    background: #e0f8e9;
+    color: #ffffff;
+    background: #282828;
 }
 
 .dashboard .customers-card .card-icon {
-    color: #ff771d;
-    background: #ffecdf;
+    color: #ffffff;
+    background: #282828;
 }
 
 .dashboard .maintain-card .card-icon {
-    color: #ff4757;
-    background:#FCCFD5;
+    color: #ffffff;
+    background: #282828;
 }
 
 .dashboard .booking-card .card-icon {
-    color: #2f3542;
-    background: #dfe4ea;
+    color: #ffffff;
+    background: #282828;
 }
 
 /* === Activity === */
@@ -936,7 +936,7 @@ form .btn {
 }
 
 .btn-secondary{
-    background: #778ca3!important;
+    background: #a1a1a1 !important;
     font-weight: bolder;
     border: none;
     border-radius: 7px;
@@ -944,7 +944,7 @@ form .btn {
 
 .modal-title{
     font-weight: bolder;
-    color: #4b7bec;
+    color: #585858;
     font-family:"Open Sans", sans-serif;
 }
 
@@ -987,7 +987,7 @@ form .btn {
     padding: 20px 0;
     font-size: 14px;
     transition: all 0.3s;
-    border-top: 1px solid #cddfff;
+    border-top: 1px solid #c9c9c9;
 }
 
 .footer .copyright {
@@ -1029,7 +1029,7 @@ form .btn {
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    color: var(--swiper-theme-color);
+    color: #000000;
 }
 
 .autoplay-progress svg {
@@ -1041,7 +1041,7 @@ form .btn {
     width: 100%;
     height: 100%;
     stroke-width: 4px;
-    stroke: var(--swiper-theme-color);
+    stroke: #828282;
     fill: none;
     stroke-dashoffset: calc(125.6 * (1 - var(--progress)));
     stroke-dasharray: 125.6;
